      cached login.
    * Plug memory leak in client SPNEGO session setup code.
    * Don't clear cached U/SID and UG/SID entries when we want to 
      logon offline.


o   Steve French <sfrench@us.ibm.com> 
    * Allow prepaths in mount.cifs.
    * Don't prompt for a password in mount.cifs when sec=none has been 
      specified.


o   Volker Lendecke <vl@samba.org>
    * Fix memory corruption bug in string_replace().
    * Fix valgrind error in parse_domain_user().
    * Fix compilation of explicit --without-winbind.
    * Fix an uninitialized variable and other compiler warnings.
    * Fix memory leak in smbd's claim session code.


o   Stefan Metzmacher <metze@samba.org>
    * Add AC_GNU_SOURCE macro in libreplace for systems which don't have it.
    * Fix libreplace compiler warnings.


o   Jens Nissen <jens.nissen@gmx.net>
    * Fix memory leak on the file/directory ACL processing code.


o   Simo Sorce <idra@samba.org>
    * Memory allocation cleanups and sanity checks after the malloc(0) 
      == NULL crusade.
    * Fix socket leak in idmap_ldap.c.
    * Fix failure in "net idmap restore".
    * Fix crash bug in idmap_ldap's get_credentials() code.


o   Alison Winters <alisonw@sgi.com>
    * Add missing return calls in sendfilereadbraw.


Changes since 3.0.24
--------------------


commits
-------

o   Michael Adam <ma@sernet.de>
    * Patch to lib/sysquotas_linux.c replacing some "get"s by "set"s.  
      This makes the difference between the get and set calls for
      SMB_USER_FS_QUOTA_TYPE and SMB_GROUP_FS_QUOTA_TYPE. 
    * Prevent collision from config.h created by stand alone component
      builds.


o   Jeremy Allison <jra@samba.org>
    * Fix CIFS POSIX unlink behavior.
    * Change POSIX_UNLINK to allow clients to differentiate between 
      unlink/rmdir calls.
    * Add smbclient implementations of POSIX open/mkdir/unlink/rmdir.
    * Refactor MS-DFS server and client code.
    * Support deep MS-DFS referrals in Samba client applications.