@@ -14,3 +14,7 @@ debugger.
 
 New passdb plugins should go into the samba lib directory, (/usr/lib/samba/pdb/
 for most distributions). An example would be: /usr/lib/samba/pdb/test.so
+
+Be aware that the SQL and XML based passdb modules have been removed since the
+3.0.23 release.  More information of external support for SQL passdb modules
+can be found at http://pdbsql.sourceforge.net/.
